Move from Maven to Gradle
Leveraging Gradle's abilities for build caching, incremental
builds and tests, parallel test execution speeds up local and CI
build and test times.

Produced publishable artifacts are semantically the same as those
produced by the Maven build.

* Migrates all `pom.xml` into Gradle build files.
* "Normal" and integration tests work.
* Spotless, Checkstyle, Errorprone work as for the Maven build.
* Code coverage and codecov, work as well.
* The build script of the `ui/` module has been built to leverage
  Gradle's build cache. If nothing in/for the `ui/` module has
  been changed, it will not be rebuilt again.
* The "right" strategy for Gradle project is to _not_ transitively
  expose dependencies, but declare those per module. This reduces
  the number of dependencies "unintentionally leaking" into other
  modules, that do not need those.
* Gradle has no concept of a "parent project" like Maven has.
  For the sake of having the same artifacts as before and let the
  generated pom.xml's have the same structure, the Nessie build
  also builds these "parent modules".
* The Maven artifact IDs don't follow one standard. There is an
  automatic mechanism to generate Maven artifact IDs, but that
  does not work everywhere. The Maven artifact ID can therefore
  be overridden per module. Similar for the `name` and
  `description` that appear in the published poms.
* Dependency management is handled in the root project, which
  serves as a "platform" (think: bom) for the Nessie build.
  There are several ways to centralize dependency management in
  Gradle, but this is the only one that works fine with GitHub's
  dependabot.
* GitHub workflows adopted, uses `gradle/gradle-build-action`, which
  also provides better control over GitHub's cache for workflows
  (only push to the cache from the `main` branch, distinguishes
  between the various artifacts like Gradle, Maven artifacts,
  build cache).
* `buildSupport` contains a couple of Gradle plugins req